파비콘추가 1203

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>index</title>
+    <title>젤라또팩토리</title>
     <link rel="stylesheet" href="/gelatto/css/style.css">
     <link rel="stylesheet" href="/gelatto/css/slick.css">
+    <link rel="shortcut icon" href="/gelatto/image/favi.png">
     <script src="/js/jquery-1.11.3.js"></script>
     <script src="/gelatto/js/slick.js"></script>
     
