--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                 <div class="main_bg">
                     <a href="#null" style="background:url(/gelatto/image/main_rolling.png) no-repeat center"></a>
                 </div>
-                <!-- <div class="main_bg">
+                <div class="main_bg">
                     <a href="#null" style="background:url(/gelatto/image/main_rolling2.png) no-repeat center"></a>
                 </div>
                 <div class="main_bg">
                     <a href="#null" style="background:url(/gelatto/image/main_rolling3.png) no-repeat center"></a>
-                </div> -->
+                </div>
             </div>
             <!-- 롤링 버튼 -->
             <button class="main_left slick-prev"><img src="/gelatto/image/left_main.png"></button>
