--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
 
     <script src="/js/jquery-1.11.3.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <!-- <script src="/gelatto/js/slick.js"></script> -->
+    <script src="/gelatto/js/slick.js"></script>
     <script src="/js/custom.js"></script>
 
     
-    
-
 </head>
 <body>
     <header>
