--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <link rel="stylesheet" href="/gelatto/css/slick.css">
     <link rel="shortcut icon" href="/gelatto/image/favi.png">
 
+
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+    
+    
 
-    <script src="/js/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="/js/jquery-3.6.0.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="/js/custom.js"></script>
 </head>
 <body>
