css경로는 ../으로 변경, 푸터 띄어쓰기 2칸 띄우기로 변경 및 공백 하나씩제거

--- a/index.html
+++ b/index.html
@@ -830,9 +830,9 @@
                         <li><a href="#null">광고/제휴문의</a></li>
                     </ul>
                     <div class="copy_text">
-                        <p><b>주식회사 &ensp; 젤라또랩</b> &emsp; 서울특별시 강남구 테헤란로114길 38 (동일타워) 4층<br>
-                            대표 : 정규화 &emsp; 사업자등록번호 : 508-81-41222 &emsp; 통신판매업신고번호 : 2017-서울강남-02896 &emsp; 개인정보관리자 : 주민철</p>
-                        <p>대표번호 : 1644-5185 </p> <p>&emsp; 마케팅/일반 문의 : support@gelato.im  &emsp; 해외 도매 문의(Wholesale Inquiry) : bizpartner@gelato.im</p>
+                        <p><b>주식회사 &ensp;젤라또랩</b> &ensp;서울특별시 강남구 테헤란로114길 38 (동일타워) 4층<br>
+                            대표 : 정규화 &ensp;사업자등록번호 : 508-81-41222&ensp; 통신판매업신고번호 : 2017-서울강남-02896 &ensp;개인정보관리자 : 주민철</p>
+                        <p>대표번호 : 1644-5185 </p> <p>&emsp; 마케팅/일반 문의 : support@gelato.im  &ensp;해외 도매 문의(Wholesale Inquiry) : bizpartner@gelato.im</p>
                         <p>copyright (c ) gelatofactory.co.kr all rights reserved.</p>
                     </div>
                 </div>
